# lift

./: .gitignore  LICENSE  README.md  svm-tap-45-reduced-12-features.csv
Lift/: AppDelegate.swift  RecordingControllerViewController.swift  ViewController.swift
Lift.xcodeproj/: project.pbxproj
Lift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Lift/Base.lproj/: LaunchScreen.xib  Main.storyboard
Lift/Motion/: Recorder.swift
LiftTests/: LiftTests.swift
analysis/: build.sbt
analysis/analysis-exercise/: build.sbt
analysis/checkpoint/: .checkpoint-1418924774000.bk.crc  .checkpoint-1418924774000.crc  .checkpoint-1418924776000.bk.crc  .checkpoint-1418924776000.crc  .checkpoint-1418924778000.bk.crc  .checkpoint-1418924778000.crc  .checkpoint-1418924780000.bk.crc  .checkpoint-1418924780000.crc  .checkpoint-1418924782000.bk.crc  .checkpoint-1418924782000.crc  checkpoint-1418924774000  checkpoint-1418924774000.bk  checkpoint-1418924776000  checkpoint-1418924776000.bk  checkpoint-1418924778000  checkpoint-1418924778000.bk  checkpoint-1418924780000  checkpoint-1418924780000.bk  checkpoint-1418924782000  checkpoint-1418924782000.bk
analysis/exercise/: build.sbt
analysis/exercise-analysis/: build.sbt
analysis/exercise-dl/: build.sbt
analysis/exercise-ld/: build.sbt
analysis/exercise-rt/: build.sbt
analysis/exercise-rt-protocol/: build.sbt
analysis/project/: BaseSettings.scala  Dependencies.scala  PublishSettings.scala  ResolverSettings.scala
doc/: classification-introduction.html  cqrs-es.html  post1.html  push.html
doc/images/: cluster.graffle  flow.graffle  lift-actors.graffle
ios/: Podfile  SensorKind+Localisation.swift
ios/Alamofire/: Alamofire+SwiftyJSON.swift  Alamofire.swift
ios/Lift/: AccelerometerReceiver.swift  AccelerometerRecorder.swift  AccountViewController.swift  AppDelegate.swift  CurrentLiftUser.swift  DemoSessionController.swift  DeviceInfo+Localization.swift  DeviceSessionStatsKey+Localisation.swift  DeviceSettingsController.swift  ExerciseIntensityKey+Localisation.swift  HomeHeader.xib  (+42 more)
ios/Lift Watch App/: Info.plist  Interface.storyboard
ios/Lift WatchKit App/: Info.plist  Interface.storyboard
ios/Lift WatchKit Extension/: GlanceController.swift  Info.plist  InterfaceController.swift  NotificationController.swift  PushNotificationPayload.apns
ios/Lift.xcodeproj/: project.pbxproj
ml/: build.sbt
pe/: build.sbt
pebble/: CMakeLists.txt  appinfo.json  pebble-mock  wscript
pebble/core/: CMakeLists.txt
pebble/core/main/: CMakeLists.txt  am.c  am.h  debug_macros.h  dl.c  dl.h  gfs.c  gfs.h  queue.c  queue.h
pebble/core/pebble-mock/: CMakeLists.txt  accel_service.cpp  accel_service.h  mock.cpp  mock.h
pebble/core/test/: CMakeLists.txt  gfs.cpp  mock_pebble_accel.c  mock_pebble_accel.h  pebble_accel.c
pebble/src/: gfs.c  gfs.h  main.c
server/: README.md  Vagrantfile  build.sbt  fig.yml  start-cluster.sh  stop-cluster.sh
(+693 files in other folders)
