CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (pebble) 

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
ENABLE_TESTING()

FIND_PACKAGE(Boost REQUIRED COMPONENTS system chrono thread filesystem)

SET(GTEST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/gtest-1.7.0")
SET(GTEST_INCLUDE_DIR "${GTEST_ROOT}/include")
ADD_SUBDIRECTORY(${GTEST_ROOT} "${CMAKE_CURRENT_BINARY_DIR}/gtest")

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})

ADD_SUBDIRECTORY(core)
