CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (pebble) 

SET_PROPERTY(DIRECTORY . APPEND PROPERTY COMPILE_DEFINITIONS DEBUG=1)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
ENABLE_TESTING()

FIND_PACKAGE(Boost REQUIRED)

SET(GTEST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/gtest-1.7.0")
SET(PEBBLE_MOCK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/pebble-mock")

SET(GTEST_INCLUDE_DIR "${GTEST_ROOT}/include")
ADD_SUBDIRECTORY(${GTEST_ROOT} "${CMAKE_CURRENT_BINARY_DIR}/gtest")

SET(PEBBLE_MOCK_INCLUDE_DIR "${PEBBLE_MOCK_ROOT}/include")
ADD_SUBDIRECTORY(${PEBBLE_MOCK_ROOT} "${CMAKE_CURRENT_BINARY_DIR}/pebble-mock")

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PEBBLE_MOCK_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_SUBDIRECTORY(core)
